--- a/web/pom.xml
+++ b/web/pom.xml
@@ -147,42 +147,42 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>build</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>remove</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <showLogs>true</showLogs>
-                    <images>
-                        <image>
-                            <name>%g/%a:%l</name>
-                            <build>
-                                <dockerFileDir>${basedir}/target</dockerFileDir>
-                            </build>
-                            <run>
-                                <ports>
-                                    <port>80:80</port>
-                                </ports>
-                            </run>
-                        </image>
-                    </images>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>io.fabric8</groupId>-->
+                <!--<artifactId>docker-maven-plugin</artifactId>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>build</id>-->
+                        <!--<phase>install</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>build</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>clean</id>-->
+                        <!--<phase>clean</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>remove</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<showLogs>true</showLogs>-->
+                    <!--<images>-->
+                        <!--<image>-->
+                            <!--<name>%g/%a:%l</name>-->
+                            <!--<build>-->
+                                <!--<dockerFileDir>${basedir}/target</dockerFileDir>-->
+                            <!--</build>-->
+                            <!--<run>-->
+                                <!--<ports>-->
+                                    <!--<port>80:80</port>-->
+                                <!--</ports>-->
+                            <!--</run>-->
+                        <!--</image>-->
+                    <!--</images>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
