--- a/web/package.json
+++ b/web/package.json
@@ -62,16 +62,16 @@
     "fake": "json-server --config 'fake/json-server.json' fake/db.json"
   },
   "dependencies": {
-    "@angular-redux/store": "^6.0.0",
-    "@angular/common": "2.4.2",
-    "@angular/compiler": "2.4.2",
-    "@angular/core": "2.4.2",
-    "@angular/forms": "2.4.2",
-    "@angular/http": "2.4.2",
-    "@angular/platform-browser": "2.4.2",
-    "@angular/platform-browser-dynamic": "2.4.2",
-    "@angular/platform-server": "2.4.2",
-    "@angular/router": "3.4.2",
+    "@angular-redux/store": "^6.0.1",
+    "@angular/common": "2.4.9",
+    "@angular/compiler": "2.4.9",
+    "@angular/core": "2.4.9",
+    "@angular/forms": "2.4.9",
+    "@angular/http": "2.4.9",
+    "@angular/platform-browser": "2.4.9",
+    "@angular/platform-browser-dynamic": "2.4.9",
+    "@angular/platform-server": "2.4.9",
+    "@angular/router": "3.4.9",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -81,34 +81,36 @@
     "hammerjs": "^2.0.8",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
-    "materialize-css": "^0.97.8",
+    "materialize-css": "^0.98.0",
     "redux": "^3.6.0",
-    "roboto-fontface": "^0.6.0",
-    "rxjs": "5.0.3",
-    "zone.js": "0.7.6"
+    "redux-logger": "^2.8.2",
+    "redux-observable": "^0.14.0",
+    "roboto-fontface": "^0.7.0",
+    "rxjs": "5.2.0",
+    "zone.js": "0.7.7"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.33",
-    "@types/jasmine": "2.5.41",
-    "@types/node": "^6.0.38",
+    "@types/jasmine": "2.5.43",
+    "@types/node": "^7.0.5",
     "@types/selenium-webdriver": "2.53.33",
-    "@types/source-map": "^0.1.27",
+    "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
-    "angular-router-loader": "^0.4.0",
+    "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "3.0.0-beta.10",
+    "awesome-typescript-loader": "3.0.8",
     "codelyzer": "~2.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "^0.10.1",
     "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.21.0",
-    "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "0.2.0",
+    "imports-loader": "^0.7.1",
+    "istanbul-instrumenter-loader": "2.0.0",
     "json-loader": "^0.5.4",
     "json-server": "^0.9.4",
     "karma": "^1.4.1",
@@ -123,29 +125,29 @@
     "karma-summary-reporter": "^1.3.3",
     "karma-webpack": "^2.0.2",
     "null-loader": "^0.1.1",
-    "parse5": "^2.2.2",
-    "protractor": "^4.0.10",
+    "parse5": "^3.0.2",
+    "protractor": "^5.1.1",
     "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.8.0",
-    "rimraf": "~2.5.4",
+    "remap-istanbul": "^0.9.1",
+    "rimraf": "~2.6.1",
     "script-ext-html-webpack-plugin": "^1.3.2",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "1.0.5",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.2",
-    "ts-node": "^1.7.0",
-    "tslint": "4.4.2",
-    "tslint-loader": "3.4.2",
+    "ts-node": "^2.1.0",
+    "tslint": "4.5.1",
+    "tslint-loader": "3.4.3",
     "typedoc": "^0.5.0",
-    "typescript": "2.0.10",
+    "typescript": "2.2.1",
     "url-loader": "^0.5.7",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
-    "webpack": "2.2.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "2.2.0",
+    "webpack": "2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "2.4.1",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "~1.0.1"
+    "webpack-merge": "3.0.0"
   },
   "repository": {
     "type": "git",
