--- a/web/package.json
+++ b/web/package.json
@@ -2,32 +2,26 @@
   "name": "Dominium",
   "version": "0.0.1",
   "description": "Ein Web Frontend für die Haushaltsbuch Anwendung",
+  "author": "Matthias Haschka",
+  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
+  "license": "Apache-2.0",
   "keywords": [
     "angular2",
     "webpack",
     "typescript"
   ],
-  "author": "Matthias Haschka",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
-  "license": "Apache-2.0",
   "scripts": {
-    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
-    "build:docker": "npm run build:prod && docker build -t frontend:latest .",
-    "build:prod": "webpack --config config/webpack.prod.js  --profile",
-    "build": "npm run build:dev",
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
     "ci": "npm run lint && npm test && npm run e2e",
     "clean:dist": "npm run rimraf -- target/dist",
     "clean:install": "npm set progress=false && npm install",
-    "clean:start": "npm start",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage target/dist",
     "docker": "docker",
-    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
-    "e2e:live": "npm run e2e -- --elementExplorer",
-    "e2e": "npm run protractor",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubDev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubProd",
-    "github-deploy": "npm run github-deploy:dev",
-    "lint": "npm run tslint \"src/**/*.ts\"",
     "postversion": "git push && git push --tags",
     "prebuild:dev": "npm run clean:dist",
     "prebuild:prod": "npm run clean:dist",
@@ -37,117 +31,51 @@
     "preversion": "npm test",
     "protractor": "protractor",
     "rimraf": "rimraf",
-    "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:prod": "http-server target/dist --cors",
-    "server:prod:ci": "http-server target/dist -p 8000 --cors",
-    "server": "npm run server:dev",
-    "start:hmr": "npm run server:dev:hmr",
-    "start": "npm run server:dev",
-    "test": "karma start",
-    "tslint": "tslint",
-    "typedoc": "typedoc",
-    "version": "npm run build",
-    "watch:dev:hmr": "npm run watch:dev -- --hot",
-    "watch:dev": "npm run build:dev -- --watch",
-    "watch:prod": "npm run build:prod -- --watch",
-    "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "watch:testd": "karma start --auto-watch --no-single-run --browsers=Chrome",
-    "watch": "npm run watch:dev",
-    "webdriver-manager": "webdriver-manager",
-    "webdriver:start": "npm run webdriver-manager start",
-    "webdriver:update": "npm run webdriver-manager update",
-    "webpack-dev-server": "webpack-dev-server",
-    "webpack": "webpack",
     "fake": "json-server --config 'fake/json-server.json' fake/db.json"
   },
   "dependencies": {
     "@angular-redux/store": "^6.0.1",
-    "@angular/common": "2.4.9",
-    "@angular/compiler": "2.4.9",
-    "@angular/core": "2.4.9",
-    "@angular/forms": "2.4.9",
-    "@angular/http": "2.4.9",
-    "@angular/platform-browser": "2.4.9",
-    "@angular/platform-browser-dynamic": "2.4.9",
-    "@angular/platform-server": "2.4.9",
-    "@angular/router": "3.4.9",
-    "@angularclass/conventions-loader": "^1.0.2",
-    "@angularclass/hmr": "~1.2.2",
-    "@angularclass/hmr-loader": "~3.0.2",
-    "angular2-materialize": "^6.3.0",
-    "assets-webpack-plugin": "^3.4.0",
+    "@angular/common": "2.4.10",
+    "@angular/compiler": "2.4.10",
+    "@angular/core": "2.4.10",
+    "@angular/forms": "2.4.10",
+    "@angular/http": "2.4.10",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "2.4.10",
+    "@angular/platform-browser-dynamic": "2.4.10",
+    "@angular/platform-server": "2.4.10",
+    "@angular/router": "3.4.10",
+    "@covalent/core": "^1.0.0-beta.2-1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "http-server": "^0.9.0",
-    "ie-shim": "^0.1.0",
-    "materialize-css": "^0.98.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
     "redux-observable": "^0.14.0",
     "roboto-fontface": "^0.7.0",
     "rxjs": "5.2.0",
-    "zone.js": "0.7.7"
+    "showdown": "^1.6.4",
+    "zone.js": "0.7.8"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.2",
+    "@angular/compiler-cli": "^2.4.10",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "2.5.43",
     "@types/node": "^7.0.5",
-    "@types/selenium-webdriver": "2.53.33",
-    "@types/source-map": "^0.5.0",
-    "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^1.12.34",
-    "angular-router-loader": "^0.5.0",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "3.0.8",
     "codelyzer": "~2.0.0-beta.4",
-    "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.26.0",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "^0.10.1",
-    "gh-pages": "^0.12.0",
-    "html-webpack-plugin": "^2.21.0",
-    "imports-loader": "^0.7.1",
-    "istanbul-instrumenter-loader": "2.0.0",
-    "json-loader": "^0.5.4",
-    "json-server": "^0.9.4",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "^1.1.0",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-mocha-reporter": "^2.2.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-remap-coverage": "^0.1.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-summary-reporter": "^1.3.3",
-    "karma-webpack": "^2.0.2",
-    "null-loader": "^0.1.1",
-    "parse5": "^3.0.2",
     "protractor": "^5.1.1",
-    "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.9.1",
-    "rimraf": "~2.6.1",
-    "script-ext-html-webpack-plugin": "^1.3.2",
-    "source-map-loader": "^0.1.5",
-    "string-replace-loader": "1.0.5",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.4",
-    "ts-helpers": "1.1.2",
     "ts-node": "^2.1.0",
     "tslint": "4.5.1",
-    "tslint-loader": "3.4.3",
-    "typedoc": "^0.5.0",
-    "typescript": "2.2.1",
-    "url-loader": "^0.5.7",
-    "v8-lazy-parse-webpack-plugin": "^0.3.0",
-    "webpack": "2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "2.4.1",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "3.0.0"
+    "typescript": "2.2.1"
   },
   "repository": {
     "type": "git",
