--- a/web/package.json
+++ b/web/package.json
@@ -52,7 +52,7 @@
     "redux-logger": "^2.8.2",
     "redux-observable": "^0.14.0",
     "roboto-fontface": "^0.7.0",
-    "rxjs": "5.2.0",
+    "rxjs": "^5.2.0",
     "showdown": "^1.6.4",
     "zone.js": "0.7.8"
   },
