--- a/web/package.json
+++ b/web/package.json
@@ -49,7 +49,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "redux": "^3.6.0",
-    "redux-logger": "^2.8.2",
+    "redux-logger": "3.0.0",
     "redux-observable": "^0.14.0",
     "roboto-fontface": "^0.7.0",
     "rxjs": "^5.2.0",
@@ -60,7 +60,7 @@
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^2.4.10",
     "@types/hammerjs": "^2.0.33",
-    "@types/jasmine": "2.5.43",
+    "@types/jasmine": "2.5.46",
     "@types/node": "^7.0.5",
     "codelyzer": "~2.0.0-beta.4",
     "jasmine-core": "^2.5.2",
