--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,6 @@
     "prebuild:prod": "npm run clean:dist",
     "preclean:install": "npm run clean",
     "preclean:start": "npm run clean",
-    "pree2e": "npm run webdriver:update -- --standalone",
     "preversion": "npm test",
     "protractor": "protractor",
     "rimraf": "rimraf",
@@ -38,6 +37,7 @@
     "@angular/common": "2.4.10",
     "@angular/compiler": "2.4.10",
     "@angular/core": "2.4.10",
+    "@angular/flex-layout": "^2.0.0-beta.7",
     "@angular/forms": "2.4.10",
     "@angular/http": "2.4.10",
     "@angular/material": "^2.0.0-beta.2",
