--- a/web/package.json
+++ b/web/package.json
@@ -34,31 +34,31 @@
   },
   "dependencies": {
     "@angular-redux/store": "^6.0.1",
-    "@angular/common": "2.4.10",
-    "@angular/compiler": "2.4.10",
-    "@angular/core": "2.4.10",
-    "@angular/flex-layout": "^2.0.0-beta.7",
-    "@angular/forms": "2.4.10",
-    "@angular/http": "2.4.10",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "2.4.10",
-    "@angular/platform-browser-dynamic": "2.4.10",
-    "@angular/platform-server": "2.4.10",
-    "@angular/router": "3.4.10",
-    "@covalent/core": "^1.0.0-beta.2-1",
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/flex-layout": "^2.0.0-beta.8",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/material": "^2.0.0-beta.5",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/platform-server": "4.1.3",
+    "@angular/router": "4.1.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "redux": "^3.6.0",
     "redux-logger": "3.0.0",
     "redux-observable": "^0.14.0",
     "roboto-fontface": "^0.7.0",
-    "rxjs": "^5.2.0",
+    "rxjs": "^5.4.0",
     "showdown": "^1.6.4",
-    "zone.js": "0.7.8"
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^2.4.10",
+    "@angular/cli": "^1.0.5",
+    "@angular/compiler-cli": "^4.1.3",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "2.5.46",
     "@types/node": "^7.0.5",
