--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
                 <version>2.0.5</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.javamoney</groupId>
+                <artifactId>moneta</artifactId>
+                <version>1.0</version>
+                <scope>compile</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
